--- a/main.css
+++ b/main.css
@@ -1,29 +1,30 @@
+/* Background image style in body */
 body{
-    background-color: beige;
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/d/db/Background_Clouds_2_%2855079272%29.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
-}
-p{
-    color:black;
-}
+    background-position: center center;
 
+}
+/* paragraph color */
+p{
+    color: white;
+}
+/* mouse over color nav-links in nav-bar &/
 #header a:hover{
     color: pink;
 }
-html {
-    position: relative;
-    min-height: 100%;
+
+  /* footer background and padding */
+  footer{
+    background: #444;
+    padding: 10px;
   }
-  body {
-    margin-bottom: 60px; /* Margin bottom by footer height */
+  /* Styling footer icons */
+  .icons i {
+    color: #fff;
+    font-size: 30px;
   }
-  .sticky-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px; /* Set the fixed height of the footer here */
-    line-height: 60px; /* Vertically center the text there */
-    margin-top: 60px;
-  }
+  
   
   
