--- a/main.css
+++ b/main.css
@@ -23,6 +23,9 @@ p{
     position: fixed;
     bottom: 0;
     width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    display : block;
   }
   /* Styling footer icons */
   .icons i {
